# teka3003-lahdeviite-projekti

./: .gitignore  README.md  pohjaa.py  pyproject.toml
src/: app.py  console_io.py  main.py  references.db
src/entities/: refobj.py  viite.py
src/repositories/: viite_repository.py
src/services/: viite_service.py
src/tests/: test_console_io.py
