[project]
name = "lahdeviite-projekti"
version = "0.1.0"
description = "Ohjelmistotuotanto-kurssin S25 toteutuksen Ryhmä2 miniprojekti."
authors = [
    {name = "R"}
]
license = {text = "TBA"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
